# cfrac

./: CHANGELOG.md  README.md  cfrac.cabal
spec/: Main.hs
src/: CFrac.hs
test/: Main.hs
